logo and code updates

--- a/www/egnite_web.css
+++ b/www/egnite_web.css
@@ -54,3 +54,19 @@ h2 {
 #well_panel.well {
     background-color: #f5f5f500!important;
 }
+
+button {
+  background-image: url(images/cancel.png);
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  /* put the height and width of your image here */
+  height: 50px;
+  width: 200px;
+  border: none;
+}
+
+button span {
+  display: none;
+}
+
+
